<resources>
    <string name="app_name">BAS Control Center</string>
    <string name="register">Daftar Sekarang</string>
    <string name="click_here_to_reset">Atur Ulang Kata Sandi</string>
    <string name="loading">Sedang memuat</string>
    <string name="inputRegistNumber">Nomor Polisi (TNKB)<font color="#cc0029">*</font></string>
    <string name="inputVhlLength">Panjang (P)<font color="#cc0029">*</font></string>
    <string name="inputVhlWidth">Lebar (L)<font color="#cc0029">*</font></string>
    <string name="inputVhlHeight">Tinggi (T)<font color="#cc0029">*</font></string>
    <string name="inputVhlBrand">Merk Kendaraan</string>
    <string name="inputVhlIdentityNumber">Nomor Rangka/NIK/VIN</string>
    <string name="inputVhlEngineNumber">Nomor Mesin</string>
    <string name="inputVhlManufactureYear">Tahun Pembuatan</string>
    <string name="inputVhlDimension">Dimensi Kendaraan<font color="#cc0029">*</font></string>
    <string name="inputVhlStatus">Status Kendaraan<font color="#cc0029">*</font></string>

    <string name="inputPoNumberPtBas">Nomor Received Order (RO)<font color="#cc0029">*</font></string>
    <string name="inputPoNumberPtBas2">Nomor Received Order (RO) (auto)<font color="#cc0029">*</font></string>
    <string name="inputPoNumberCustomer">Nomor PO Customer (auto)<font color="#cc0029">*</font></string>
    <string name="inputPoNumberCustomer2">Nomor PO Customer<font color="#cc0029">*</font></string>
    <string name="inputPoProductName">Material<font color="#cc0029">*</font></string>
    <string name="inputPoProductType">Jenis<font color="#cc0029">*</font></string>
    <string name="inputCustomerName">Pilih Customer<font color="#cc0029">*</font></string>
    <string name="inputCurrency">Mata Uang<font color="#cc0029">*</font></string>
    <string name="inputRoType">Pilih Jenis RO<font color="#cc0029">*</font></string>

    <string name="showMore">Tampilkan lebih banyak</string>
    <string name="showLess">Tampilkan lebih sedikit</string>


    <string name="inputDateRequired">Tanggal<font color="#cc0029">*</font></string>
    <string name="inputTimeRequired">Waktu</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_invoice">AddInvoiceActivity</string>
    <string name="inactive">Tidak Aktif</string>
    <string name="active">Aktif</string>
    <string name="other_detail">Detail Lainnya (opsional)</string>
    <string name="dash">-</string>

    <string name="title_vhl_height_correction">Koreksi Tinggi (K)</string>
    <string name="plus">+</string>
    <string name="title_final_height_result">Tinggi Hasil Koreksi (TK): 0 cm</string>
    <string name="default_content_description">Desc</string>
    <string name="cubication">Kubikasi</string>
    <string name="default_cubic_unit_value">0 m³</string>
    <string name="default_height_val">200</string>
    <string name="default_width_val">250</string>
    <string name="default_length_val">650</string>
    <string name="zero_value">0</string>
    <string name="default_currency">IDR</string>
    <string name="search_by">Cari Berdasarkan</string>
</resources>