<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".update.UpdateVehicleData">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_transparent"
            android:orientation="vertical"
            android:padding="24dp"
            android:showDividers="middle">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="Contoh: L4332AAD"
                app:startIconDrawable="@drawable/ic_100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_vhl_regist_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                    android:hint="@string/inputRegistNumber"
                    android:inputType="textFilter|textCapCharacters"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inputVhlDimension" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:divider="@drawable/divider_transparent"
                android:orientation="horizontal"
                android:showDividers="middle">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:suffixText="cm">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_vhl_length"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputVhlLength"
                        android:inputType="number"
                        android:maxLength="3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:suffixText="cm">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_vhl_width"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputVhlWidth"
                        android:inputType="number"
                        android:maxLength="3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:suffixText="cm">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_vhl_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputVhlHeight"
                        android:inputType="number"
                        android:maxLength="3" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inputVhlStatus" />

            <RadioGroup
                android:id="@+id/radio_group_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/outline_box"
                android:orientation="horizontal"
                android:padding="5dp">

                <RadioButton
                    android:id="@+id/radio_active"
                    style="@style/Theme.TravelPermitBAS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/active"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_inactive"
                    style="@style/Theme.TravelPermitBAS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inactive"
                    android:textSize="16sp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_detail" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_trademark">

                <AutoCompleteTextView
                    android:id="@+id/spinner_vhl_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputVhlBrand"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="Contoh: MHBG1CJ1B8K00456"
                app:startIconDrawable="@drawable/ic_identity_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_vhl_identity_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                    android:hint="@string/inputVhlIdentityNumber"
                    android:inputType="textFilter|textCapCharacters" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="Contoh: HB18706697B"
                app:startIconDrawable="@drawable/ic_identity_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_vhl_engine_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                    android:hint="@string/inputVhlEngineNumber"
                    android:inputType="textFilter|textCapCharacters" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                app:placeholderText="Contoh: 2020"
                app:startIconDrawable="@drawable/ic_outline_today">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_vhl_manufacture_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputVhlManufactureYear"
                    android:inputType="number"
                    android:maxLength="4" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_vhl_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_outline_save_black"
        android:tintMode="@color/white"
        app:backgroundTint="@color/pure_orange"
        android:contentDescription="Save Data" />
</RelativeLayout>