<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create.AddReceivedOrder">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_po_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="Proceed"
        android:src="@drawable/ic_outline_check"
        android:tintMode="@color/white"
        app:backgroundTint="@color/pure_orange" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".create.AddReceivedOrder">

            <LinearLayout
                android:id="@+id/ll_input_all_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_transparent"
                android:orientation="vertical"
                android:padding="24dp"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/divider_transparent"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:startIconDrawable="@drawable/ic_outline_today">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_po_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/inputDateRequired"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:startIconDrawable="@drawable/ic_outline_today">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_po_TOP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="T.O.P."
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_transparent"
                android:orientation="horizontal"
                android:showDividers="middle">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_product_loading">

                    <AutoCompleteTextView
                        android:id="@+id/spinner_po_transport_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
                        android:hint="@string/inputPoProductType"
                        android:inputType="textFilter|textCapCharacters" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_outline_currency">

                    <AutoCompleteTextView
                        android:id="@+id/spinner_po_currency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="@string/inputCurrency"
                        android:inputType="textFilter|textCapCharacters" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_outline_person">

                    <AutoCompleteTextView
                        android:id="@+id/spinner_po_cust_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ "
                        android:hint="@string/inputCustomerName"
                        android:inputType="textFilter|textCapCharacters" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_outline_receipt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_po_number_customer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/"
                        android:hint="@string/inputPoNumberCustomer2"
                        android:inputType="textFilter|textCapCharacters" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wrap_edt_po_number_ptbas"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:prefixText="RO-"
                    app:startIconDrawable="@drawable/ic_outline_receipt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_po_number_ptbas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/"
                        android:focusable="false"
                        android:hint="@string/inputPoNumberPtBas2"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/ll_add_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/light_grey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Daftar Item" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/layout_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />
                    </HorizontalScrollView>

                    <Button
                        android:id="@+id/btn_add_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/white"
                        android:drawableLeft="@drawable/ic_outline_add_circle"
                        android:text="TAMBAH ITEM"
                        android:textAllCaps="true" />

                   <!-- <TextView
                        android:id="@+id/tv_sum_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="SUM TOTAL" />-->

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <include layout="@layout/bottom_sheet_purchase_order_details"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>